@@ -5,7 +5,7 @@ use 5.010;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '0.02';
+our $VERSION = '0.03';
 
 binmode( STDOUT, ':encoding(utf-8)' );
 
@@ -208,7 +208,7 @@ B<aseag-m> [B<-abfprV>] [B<-l> I<lines>] [B<-s> I<timefmt> | B<-S> I<timefmt>]
 
 =head1 VERSION
 
-version 0.02
+version 0.03
 
 =head1 DESCRIPTION
 
@@ -271,7 +271,7 @@ Show version information.
 =head1 EXIT STATUS
 
 Normally zero. B<1> means B<aseag-m> was called with invalid options,
-B<2> indicates a request error from Travel::Status::DE::EFA(3pm),
+B<2> indicates a request error from Travel::Status::DE::URA(3pm),
 B<3> a bad (unknown or ambiguous) I<stop> name.
 
 =head1 CONFIGURATION
